fix part of tests and code style